--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
     "nodemon": "^2.0.18"
   }
 }
