--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./server/app.js"
+    "start": "nodemon ./server/app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
